--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "BarberConnect",
   "short_name": "BarberApp",
   "description": "Asistente virtual para la gestión de tu barbería.",
-  "start_url": "/index.html",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#f5f5f5",
   "theme_color": "#667eea",
