--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Asistente virtual para la gestión de tu barbería.",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#f5f5f5",
+  "background_color": "667eea",
   "theme_color": "#667eea",
   "orientation": "portrait-primary",
   "icons": [
