--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "667eea",
-  "theme_color": "#667eea",
+"theme_color": "#1E1E1E",
   "orientation": "portrait-primary",
   "icons": [
     {
